Fixing overflow scrolling thead element

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -34,13 +34,18 @@ select {
 
 table {
 	display: block;
-	max-height: 60vh;
-	overflow: auto;
 
 	thead {
+		display: block;
 		white-space: nowrap;
 		position: sticky;
 		top: 0;
+	}
+
+	tbody {
+		display: block;
+		max-height: 60vh;
+		overflow-y: scroll;
 	}
 
 	th,
